--- a/corresponder-backend/package.json
+++ b/corresponder-backend/package.json
@@ -4,8 +4,11 @@
   "description": "Correspond backend",
   "main": "server.js",
   "dependencies": {
+    "body-parser": "^1.18.3",
+    "cors": "^2.8.5",
     "dotenv": "^6.2.0",
     "express": "^4.16.4",
+    "morgan": "^1.9.1",
     "nodemon": "^1.18.10"
   },
   "devDependencies": {
@@ -14,7 +17,7 @@
     "babel-preset-env": "^1.7.0"
   },
   "scripts": {
-    "start": "nodemon --exec babel-node ./app.js",
+    "start": "nodemon --exec babel-node ./src/server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Nikodem Lorenz",
