--- a/corresponder-backend/package.json
+++ b/corresponder-backend/package.json
@@ -4,6 +4,7 @@
   "description": "Correspond backend",
   "main": "server.js",
   "dependencies": {
+    "bcrypt": "^3.0.4",
     "body-parser": "^1.18.3",
     "cors": "^2.8.5",
     "dotenv": "^6.2.0",
