--- a/corresponder-frontend/package.json
+++ b/corresponder-frontend/package.json
@@ -16,7 +16,8 @@
     "axios": "^0.18.0",
     "cross-env": "^5.2.0",
     "nuxt": "^2.4.0",
-    "vue-awesome": "^3.4.0"
+    "vue-awesome": "^3.4.0",
+    "vue2-touch-events": "^2.0.0"
   },
   "devDependencies": {
     "node-sass": "^4.11.0",
